plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.hibernate.orm' version '7.4.0.Final'
    id 'com.github.ben-manes.versions' version '0.54.0'
    id 'jacoco'
    // OWASP Dependency-Check: scans Gradle dependencies for known CVEs (C2 / OWASP A06).
    // Run with: ./gradlew dependencyCheckAnalyze
    id 'org.owasp.dependencycheck' version '12.2.2'
}

group = 'org.fable'
version = '4.15.50'
description = 'fable'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

compileTestJava {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview']
}

// OWASP Dependency-Check configuration
dependencyCheck {
    // Fail the build when a CVSS score >= 9.0 (critical) is found.
    // Review the HTML report at build/reports/dependency-check-report.html.
    failBuildOnCVSS = 9.0
    suppressionFile = file("${rootDir}/dependency-check-suppressions.xml").exists()
            ? "${rootDir}/dependency-check-suppressions.xml"
            : null
    format = 'HTML'
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    // --- Spring Boot ---
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.aspectj:aspectjweaver:1.9.25.1'

    // --- Reactive Streams ---
    implementation 'io.projectreactor:reactor-core:3.8.6'

    // --- Database & Migration ---
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.9'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-mysql:12.9.0'

    // --- Security & Authentication ---
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // --- Lombok (For Clean Code) ---
    compileOnly 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'

    // --- Book & Image Processing ---
    implementation 'org.apache.pdfbox:pdfbox:3.0.7'
    implementation 'org.apache.pdfbox:pdfbox-io:3.0.7'
    implementation 'org.apache.pdfbox:xmpbox:3.0.7'
    implementation 'org.apache.pdfbox:jbig2-imageio:3.0.5'
    // Required for JPEG2000 support in PDFBox (not covered by TwelveMonkeys)
    implementation 'com.github.jai-imageio:jai-imageio-core:1.4.0'
    implementation 'com.github.jai-imageio:jai-imageio-jpeg2000:1.4.0'
    
    // --- TwelveMonkeys ImageIO ---
    implementation 'com.twelvemonkeys.imageio:imageio-jpeg:3.13.1'
    implementation 'com.twelvemonkeys.imageio:imageio-tiff:3.13.1'
    implementation 'com.twelvemonkeys.imageio:imageio-webp:3.13.1'
    implementation 'com.twelvemonkeys.imageio:imageio-bmp:3.13.1'
    implementation 'org.sejda.imageio:webp-imageio:0.1.6'
    
    implementation 'io.documentnode:epub4j-core:4.2.3'

    // --- Audio Metadata (Audiobook Support) ---
    implementation 'com.github.RouHim:jaudiotagger:2.0.24'

    // --- UNRAR Support ---
    implementation 'com.github.junrar:junrar:7.6.0'

    // --- JSON & Web Scraping ---
    implementation 'org.jsoup:jsoup:1.22.2'

    // --- Mapping (DTOs & Entities) ---
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // --- API Documentation ---
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
    implementation 'org.apache.commons:commons-compress:1.28.0'
    implementation 'org.tukaani:xz:1.12'  // Required by commons-compress for 7z support
    implementation 'org.apache.commons:commons-text:1.15.0'

    // --- XML Support (JAXB) ---
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.5'
    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.9'

    // --- Template Engine ---
    implementation 'org.freemarker:freemarker:2.3.34'

    // --- Jackson 3 ---
    implementation platform('tools.jackson:jackson-bom:3.2.0')
    implementation 'tools.jackson.core:jackson-core'
    implementation 'tools.jackson.core:jackson-databind'
    implementation 'tools.jackson.module:jackson-module-blackbird'

    // --- Jackson 2 (Compatibility) ---
    // jackson-annotations version is managed by Jackson 3 BOM (requires 2.20+)
    implementation 'com.fasterxml.jackson.core:jackson-annotations'

    // --- Caching ---
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.4'

    // --- Test Dependencies ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation "org.mockito:mockito-inline:5.2.0"
    testRuntimeOnly 'com.h2database:h2'
}

hibernate {
    enhancement {
        enableAssociationManagement = false
    }
}

test {
    useJUnitPlatform()
    minHeapSize = System.getenv('BOOKLORE_TEST_MIN_HEAP') ?: '512m'
    maxHeapSize = System.getenv('BOOKLORE_TEST_MAX_HEAP') ?: '3g'
    jvmArgs("-XX:+EnableDynamicAgentLoading", "--enable-native-access=ALL-UNNAMED")
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

bootRun {
    def debug = System.getenv('REMOTE_DEBUG_ENABLED')
    jvmArgs("--enable-native-access=ALL-UNNAMED")
    if (debug.equals("true")) { 
        jvmArgs("-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005")
    }
}

bootJar {
    mainClass = 'org.fable.FableApplication'
    manifest {
        attributes 'Implementation-Version': archiveVersion.get()
    }
}